<resources>
    <string name="app_name">Architecture Components</string>
    <string name="data_binding_activity">Data Binding Activity</string>
    <string name="lifecycle_aware_activity">Lifecycle Aware Activity</string>
    <string name="viewmodel_activity">ViewModel Activity</string>
    <string name="navigation_activity">Navigation Activity</string>
    <string name="paging_activity">Paging Activity</string>
    <string name="room_activity">Room Activity</string>
    <string name="work_manager_activity">WorkManager Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="sample_desc">A collection of samples to discuss and showcase different architectural tools and patterns for Android apps.</string>
    <string name="star">star</string>
    <string name="count">30</string>
    <string name="forks">forks</string>
    <string name="sample_name">Repo Name</string>
    <string name="action_settings">Settings</string>
    <string name="note">Add Note</string>
    <string name="save">Save</string>
    <string name="saved">Note Saved</string>
    <string name="not_saved">Couldn\'t Save</string>
    <string name="no_note">No notes</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="updated">Note Updated</string>
    <string name="my_note">Note</string>
    <string name="add">Add</string>
    <string name="search_hint">GitHub Repository</string>
    <string name="no_results">No results 😓</string>
    <string name="unknown">\?</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_activity">Search Activity</string>
</resources>
