<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_data_binding_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_binding_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_lifecycle_aware_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lifecycle_aware_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_data_binding_activity" />

        <Button
            android:id="@+id/bt_view_model_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewmodel_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_lifecycle_aware_activity" />

        <Button
            android:id="@+id/bt_navigation_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_view_model_activity" />

        <Button
            android:id="@+id/bt_paging_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paging_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_navigation_activity" />

        <Button
            android:id="@+id/bt_room_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_paging_activity" />

        <Button
            android:id="@+id/bt_work_manager_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_manager_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_room_activity" />

        <Button
            android:id="@+id/bt_search_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_work_manager_activity" />
    </LinearLayout>

</layout>
