<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.example.androidjetpackcourse.data.model.GitRepo" />

        <variable
            name="gitRepo"
            type="GitRepo" />
    </data>

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/repo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@{gitRepo.full_name, default="@string/sample_name"}'
                android:textColor="@color/titleColor"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/repo_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="10"
                android:text='@{gitRepo.description, default="@string/sample_desc"}'
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/repo_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingVertical="8dp"
                    android:text='@{gitRepo.language, default="@string/language"}'
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/star"
                    android:src="@drawable/ic_star"/>

                <TextView
                    android:id="@+id/repo_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{`` + gitRepo.stargazers_count, default="@string/star"}'
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/forks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/forks"
                    android:src="@drawable/ic_git_branch" />

                <TextView
                    android:id="@+id/repo_forks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{`` + gitRepo.fork_count, default="@string/forks"}'
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>
